Fix: wrong color for disabled:hover state

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -54,7 +54,7 @@
   }
 
   .square.disabled:hover {
-    background-color: var(--button-background-color);
+    background-color: var(--button-background-color-disabled);
   }
 
   .square.winner:hover {
